--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,34 +6,63 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "@mui/x-data-grid": "^5.12.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "chai": "^4.3.6",
+    "chart.js": "^3.8.0",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.5",
+    "https-browserify": "^1.0.0",
     "i": "^0.3.7",
+    "ipfs-http-client": "^57.0.1",
     "npm": "^8.10.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.1.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-hamburger-menu": "^1.2.1",
     "react-js-pagination": "^3.0.3",
+    "react-material-ui-carousel": "^3.4.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "styled-components": "^5.3.5",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3",
     "web3-eth-contract": "^1.7.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
